# OpenForexAI

./: .$OpenForexAI.drawio.bkp  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.html  CLA.md  CLAUDE.md  CONTRIBUTING.md  DATABASE.md  LICENSE.md  OpenForexAI.drawio  README.md  Screenshots.md  Start-Codex.ps1  agent.md  architecture.md  build_pages.cmd  developer.md  package-lock.json  pyproject.toml  setup.md  start_openforexai.cmd  start_openforexai.ps1  start_py.cmd  test_broker.py  test_llm.py
.claude/: settings.local.json
.obsidian/: appearance.json  workspace.json
config/: README.md  config.default.json5  config.md  config.md.md  default.yaml  development.yaml  llm_tool_config.json5  production.yaml  prompt_library.json5  prompt_library_agent.json5  prompt_library_decision.json5  snapshot_helpers.py  snippet_library_ec.json5  snippet_library_script.json5  snippet_library_snapshot.json5  system.json  system.json5
docs/: README.de.md  README.en.md  README.md  backend-overview.de.md  backend-overview.en.md  bus-architecture.md  config.de.md  config.en.md  config.md  database.en.md  database.md  migrations.en.md  migrations.md  openforexai.adapters.brokers.en.md  openforexai.adapters.brokers.md  openforexai.adapters.database.en.md  openforexai.adapters.database.md  openforexai.adapters.en.md  openforexai.adapters.llm.en.md  openforexai.adapters.llm.md  openforexai.adapters.md  openforexai.agent-core.en.md  openforexai.agent-core.md  openforexai.agents.de.md  openforexai.agents.en.md  openforexai.agents.md  openforexai.agents.optimization.md  openforexai.data.md  (+108 more)
(+338 files in other folders)
