[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openforexai"
version = "0.1.0"
description = "Autonomous multi-agent LLM-based forex trading system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "anthropic>=0.25",
    "openai>=1.30",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "json5>=0.9",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
mt5 = ["MetaTrader5>=5.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = [
    "openforexai[api]",
    "openforexai[mt5]",
]

[project.scripts]
openforexai = "openforexai.main:run"

[tool.hatch.build.targets.wheel]
packages = ["openforexai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true


